--- a/message-us.css
+++ b/message-us.css
@@ -46,13 +46,30 @@ nav li:hover {
     flex-direction: column;
   }
 
+  nav li {
+    display: block;
+    padding: 8px;
+    color: #333;
+    text-align: center;
+  }
+
+  .li-m {
+    display: block;
+    padding: 8px;
+    color: #333;
+    text-align: center;
+
+  }
+
   .nav-links {
+    padding: 0;
     width: 100%;
     flex-direction: column;
   }
 
   .navicon {
-    margin-bottom: 14px;
+    margin-bottom: 10px;
+    align-items: center;
   }
 
   .row-row {
@@ -63,13 +80,26 @@ nav li:hover {
   .m-f .button {
     margin-top: 1vh;
     margin-bottom: 1vh;
-    width: 90%;
+    width: 100%;
+  }
+
+  .m-f .name {
+    width: 100%;
+  }
+
+  .m-f .date {
+    width: 100%;
+  }
+
+  .m-f .message {
+    width: 100%;
   }
 
   .row-row .display {
-    width: 75%;
+    width: 100%;
     flex-direction: column;
     margin-top: 2vh;
+    margin-left: 0;
   }
 }
 /* @media end */
@@ -128,14 +158,14 @@ nav a {
 .name {
   border-radius: 5px;
   margin-bottom: 1vh;
-  width: 60%;
+  width: 85%;
   padding: 1px 2px;
 }
 
 .date {
   border-radius: 5px;
   margin-bottom: 1vh;
-  width: 61%;
+  width: 86%;
 }
 
 
@@ -144,7 +174,7 @@ nav a {
 }
 
 .message {
-  width: 60%;
+  width: 85%;
   margin-bottom: 2vh;
   padding-bottom: 10vh;
   border: 2px;
